--- a/app/views/whispers/index.html.erb
+++ b/app/views/whispers/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Whispers#index</h1>
-<p>Find me in app/views/whispers/index.html.erb</p>
+<h1>つぶやき一覧</h1>
+
+<table>
+  <tr>
+    <th>つぶやき内容</th>
+  </tr>
+
+<% @whispers.each do |whisper| %>
+  <tr>
+    <td><%= whisper.content %></td>
+  </tr>
+<% end %>
+</table>
+
+<%= link_to '新しくつぶやく', new_whisper_path %>
