--- a/app/views/whispers/_form.html.erb
+++ b/app/views/whispers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @whisper, local: true) do |form| %>
+<%= form_with(model: @whisper,  local: true  ,url: choose_new_or_edit ) do |form| %>
   <% if @whisper.errors.any? %>
     <div id="error_explanation">
       <h2><%= @whisper.errors.count %>件のエラーがあります。</h2>
