トップ画面のデザイン編集

--- a/app/assets/stylesheets/whispers.scss
+++ b/app/assets/stylesheets/whispers.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the whispers controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.content{
+  background-color: pink;
+}
+
+.contents_tab{
+  background-color: orange;
+}
+
+.contents_tab2{
+  background-color: yellow;
+}
