--- a/app/views/whispers/index.html.erb
+++ b/app/views/whispers/index.html.erb
@@ -1,42 +1,17 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
-        <span class="sr-only">Bootstrap</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Bootstrap
+    <h1>つぶやき一覧</h1>
+      <p><%= notice %></p>
+  <table>
+    <tr>
+      <th>つぶやき内容</th>
+    </tr>
 
-      </a>
-    </div>
-    <div id="gnavi" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="">top</a></li>
-        <li><a href="">menu1</a></li>
-        <li><a href="">menu2</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <% @whispers.each do |whisper| %>
+        <tr>
+        <td class="content"><%= whisper.content %></td>
+        <td class="contents_tab"><%= link_to "つぶやきを編集する", edit_whisper_path(whisper.id), data: { confirm: '本当に編集していいですか？' }  %></td>
+        <td class="contents_tab2"><%= link_to 'つぶやきを削除する', whisper_path(whisper.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }  %></td>
+      </tr>
+    <% end %>
+  </table>
 
-<h1>つぶやき一覧</h1>
-
-<p><%= notice %></p>
-
-<table>
-  <tr>
-    <th>つぶやき内容</th>
-  </tr>
-
-<% @whispers.each do |whisper| %>
-  <tr>
-    <td><%= whisper.content %></td>
-    <td><%= link_to "つぶやきを編集する", edit_whisper_path(whisper.id), data: { confirm: '本当に編集していいですか？' }  %></td>
-    <td><%= link_to 'つぶやきを削除する', whisper_path(whisper.id), method: :delete ,data: { confirm: '本当に削除していいですか？' }  %></td>
-  </tr>
-<% end %>
-</table>
-
-<%= link_to '新しくつぶやく', new_whisper_path %>
+    <%= link_to '新しくつぶやく', new_whisper_path %>
